--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ jupyter-client==7.1.2
 jupyter-core==4.9.1
 matplotlib-inline==0.1.3
 nest-asyncio==1.5.4
+numpy==1.22.1
+pandas==1.4.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -18,6 +20,7 @@ prompt-toolkit==3.0.26
 ptyprocess==0.7.0
 Pygments==2.11.2
 python-dateutil==2.8.2
+pytz==2021.3
 pyzmq==22.3.0
 six==1.16.0
 spyder-kernels==2.2.1
