--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appnope==0.1.2
+aria==0.4.5
 backcall==0.2.0
 cloudpickle==2.0.0
 debugpy==1.5.1
@@ -7,7 +8,7 @@ entrypoints==0.3
 ipykernel==6.7.0
 ipython==7.31.1
 jedi==0.18.1
-jupyter-client==7.1.2
+jupyter-client==6.1.12
 jupyter-core==4.9.1
 matplotlib-inline==0.1.3
 nest-asyncio==1.5.4
@@ -20,12 +21,12 @@ prompt-toolkit==3.0.26
 ptyprocess==0.7.0
 Pygments==2.11.2
 python-dateutil==2.8.2
+python-dotenv==0.19.2
 pytz==2021.3
 pyzmq==22.3.0
 six==1.16.0
-spyder-kernels==2.2.1
+spyder-kernels==2.1.1
 tornado==6.1
 traitlets==5.1.1
 wcwidth==0.2.5
 wurlitzer==3.0.2
-python-dotenv==0.19.2
