Feature/tigris sdwis matching (#52)
* Some renames for clarity

* Script to load all the systems into PostGIS

* make colnames lower in frs and tigris to remove this cleaning in load to postgis

* Removing some code that was moved to the transformers. Little formatting adjustments.

* Some cleanup. Adding extra columns to Echo.

* Initial stab at SDWIS/ECHO <-> TIGRIS matching

* Supplementing sdwis with service area (and handling N:1's)

* Renaming match rules

* update tigris places transformer to fix a bug in cpl geometry

* quick patch to rm setting epsg for frs, echo, sdwis now that we use 4326 for all

* adding in more columns to output

Co-authored-by: RichPauloo <richpauloo@gmail.com>
Co-authored-by: Jess Goddard <jess@gosimplelab.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ numpy==1.22.2
 pandas==1.4.1
 python-dotenv==0.19.2
 openpyxl==3.0.9
+sqlalchemy==1.4.31
+psycopg2==2.9.3
+geoalchemy2==0.6.3
 
 # Optional
 ipykernel==6.9.0
